--- a/backend/classification_training.ipynb
+++ b/backend/classification_training.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-11-25T16:50:54.243572Z",
@@ -553,7 +553,7 @@
    ],
    "source": [
     "model = YOLO(\"/kaggle/input/mj-dataset/IR_model/yolo11m.pt\")\n",
-    "model.train(data=\"/kaggle/input/mj-dataset/IR_model/Mahjong_dataset/data.yaml\", imgsz=640, batch=8, epochs=30, workers=1, device=0)"
+    "model.train(data=\"/kaggle/input/mj-dataset/IR_model/Mahjong_dataset/data.yaml\", imgsz=640, batch=8, epochs=150, patience = 25, workers=1, device=0)"
    ]
   },
   {
