--- a/backend/classification_training.ipynb
+++ b/backend/classification_training.ipynb
@@ -11,11 +11,7 @@
    "outputs": [],
    "source": [
     "!pip install -q \"numpy<2.0\" \"matplotlib<3.8\" \"pillow<12.0\" --force-reinstall\n",
-    "!pip install -q ultralytics\n",
-    "\n",
-    "# Restart kernel to ensure package downgrades take effect\n",
-    "import os\n",
-    "os.kill(os.getpid(), 9)"
+    "!pip install -q ultralytics"
    ]
   },
   {
@@ -31,27 +27,42 @@
     },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
-      "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
-      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# After kernel restart, run this cell\n",
     "from ultralytics import YOLO\n",
     "\n",
-    "model = YOLO(\"/kaggle/input/mj-dataset/IR_model/yolo11m.pt\")\n",
+    "model = YOLO(\"IR_model/runs/detect/m_model_v2/weights/best.pt\")\n",
     "model.train(data=\"/kaggle/input/mj-dataset/IR_model/Mahjong_dataset/data.yaml\", imgsz=640, batch=8, epochs=120, workers=1, device=0)\n",
     "\n",
     "!zip -r results.zip /kaggle/working\n",
     "from IPython.display import FileLink\n",
     "FileLink(r'results.zip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BELOW IS FOR GOOGLE COLAB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ultralytics import YOLO\n",
+    "\n",
+    "# If you uploaded manually, specify the path directly\n",
+    "model_path = \"IR_model/runs/detect/m_model_v2/weights/best.pt\"  # Change this to your uploaded file path\n",
+    "\n",
+    "model = YOLO(model_path)\n",
+    "model.export(format='tflite')\n",
+    "\n",
+    "print(\"✅ Conversion complete!\")\n",
+    "print(f\"Output: {model_path.replace('.pt', '_float32.tflite')}\")"
    ]
   }
  ],
@@ -86,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
